.metals/.reports/metals/r_scala-toplevel-mtags_1691304736093
id: file:///C:/Users/USER/Documents/UCSC/2nd%20Year-%201st%20Semester/SCS-2204_Functional%20Programming/Tutorial_7/Q2.scala:[21..22) in Input.VirtualFile("file:///C:/Users/USER/Documents/UCSC/2nd%20Year-%201st%20Semester/SCS-2204_Functional%20Programming/Tutorial_7/Q2.scala", "object Q2{
    def  (args: Array[String]): Unit =>{
         
    }
}")
file:///C:/Users/USER/Documents/UCSC/2nd%20Year-%201st%20Semester/SCS-2204_Functional%20Programming/Tutorial_7/Q2.scala:2: error: expected identifier; obtained lparen
    def  (args: Array[String]): Unit =>{
         ^